[package]
name = "night-device-report"
version = "12.0.1"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2024"
rust-version = "1.91" # nixpkgs stable

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true

[features]
default = ["new"]
new = ["dep:itertools", "dep:systemstat"]

[dependencies]
async-proto = { version = "0.26", optional = true, features = ["gix-hash", "os_info", "semver"] }
clap = { version = "4", features = ["derive"] }
gethostname = "1"
gix-hash = { version = "0.22", features = ["serde"] }
itertools = { version = "0.14", optional = true }
lazy-regex = "3"
os_info = "3"
reqwest = { version = "0.13", default-features = false, features = ["charset", "gzip", "hickory-dns", "http2", "json", "rustls-no-provider", "system-proxy", "zstd"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
systemstat = { version = "0.2", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "process"] }
unicode-width = { version = "0.2", default-features = false }
wheel = { git = "https://github.com/fenhl/wheel", features = ["serde_json"] }

[target."cfg(windows)".dependencies]
directories = "6"

[target."cfg(unix)".dependencies]
futures = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
xdg = "3"
